--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,2 +1,7 @@
 // CONNECTIONS
-$connections-gray: #6920c3;
+$connections-gray: #4d4d4d;
+$connections-lightgray: #a3a3a3;
+$connections-yellow: #ffcc00;
+$connections-green: #00cc00;
+$connections-blue: #0099ff;
+$connections-purple: #9933ff;
