Connections: Added dynamic error popup
Made error logic not bad.

--- a/src/app/components/connections/connections/connections.component.html
+++ b/src/app/components/connections/connections/connections.component.html
@@ -1,8 +1,8 @@
 <div class="connections-container">
 
-  @if (alreadySubmittedError) {
+  @if (showError) {
     <div class="error">
-      <p>Selection already submitted. Try something else.</p>
+      {{error}}
     </div>
   }
 
