Connections: Added "mistakes left" to view

--- a/src/app/components/connections/connections.component.html
+++ b/src/app/components/connections/connections.component.html
@@ -31,6 +31,10 @@
     }
   </div>
 
+  <div class="mistakes-container">
+    <p>Mistakes left: {{submissionMistakesLeft}}</p>
+  </div>
+
   <div class="button-container">
     <button (click)="shuffle()">Shuffle</button>
     <button (click)="deselectAll()">Deselect all</button>
