--- a/src/app/components/connections/connections.component.scss
+++ b/src/app/components/connections/connections.component.scss
@@ -61,6 +61,11 @@
   color: white;
 }
 
+.mistakes-container {
+  padding-top: 23px;
+  text-align: center;
+}
+
 .button-container {
   display: flex;
   justify-content: center;
