Connections: Added word order property + logic to customize boards

--- a/src/app/components/connections/connections.component.html
+++ b/src/app/components/connections/connections.component.html
@@ -8,8 +8,8 @@
 @if (!gameOver) {
 
   @if (showError) {
-    <div class="error">
-      {{error}}
+    <div class="error-container">
+      <p>{{error}}</p>
     </div>
   }
 
