--- a/src/app/components/connections/connections.component.scss
+++ b/src/app/components/connections/connections.component.scss
@@ -4,6 +4,10 @@
   padding: 30px;
 }
 
+.error-container {
+  text-align: center;
+}
+
 .category {
   display: flex;
   justify-content: space-between;
